fixed bug where counter name wasn't scrolling on the main screen despite being too long

--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ body {
 }
 
 .counter-text-wrap {
+  white-space: nowrap;
 }
 
 .plus-svg-wrap {
